# gray-scott-sim

./: CMakeLists.txt  README.md  gs.cpp  gs_test.cpp  test.cpp
.github/workflows/: CMake.yml  CMake_Build_and_Test.yml  Test_GS.yml
jiachen_test/: test.cpp
yxy_test/: CMakeLists.txt  gs.cpp  gs_test.cpp
yxy_test/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  gs_test
